--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = "0.16"
+bevy = { version = "0.16.1", features = ["wav"] }
 bevy_enhanced_input = "0.12.0"
 rand = "0.8"
 # Set max log levels. This helps avoid unwanted low-severity log spam, which can affect performance.
