--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tracing = { version = "0.1", features = [
     "max_level_debug",
     "release_max_level_warn",
 ] }
+serde = { version = "1.0.219", features = ["derive"] }
 
 
 [features]
